--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -181,8 +181,18 @@ h4 {
 }
 
 img.shadowed {
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .4), 0 22px 50px 4px rgba(0, 0, 0, 0.4), 0 0 0 1px rgba(0, 0, 0, 0.0);
+  filter: drop-shadow(0.25em 0.35em 0.4em #888);
+  margin-bottom: 1em;
+  margin-right: 1em;
 }
+
+img.shadowed.iphone-screenshot {
+  background: transparent;
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 20px;
+}
+
 
 .md-typeset td,
 .md-typeset th {
