feat: add css class "vertically-centered"

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -195,6 +195,9 @@ img.shadowed.iphone-screenshot {
   -moz-border-radius: 20px;
 }
 
+img.vertically-centered {
+  vertical-align: middle;
+}
 
 .md-typeset td,
 .md-typeset th {
