--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:slnt,wght@0,500..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-5,500&display=swap');
 
 html {
   scroll-padding-top: 3.65rem;
@@ -10,6 +12,26 @@ body, input {
   -webkit-font-feature-settings: "kern","liga";
   font-feature-settings: "kern","liga";
   font-family: "Atkinson Hyperlegible", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: "Inter", "Atkinson Hyperlegible", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1 {
+  font-weight: 700 !important;
+  color: #000 !important;
+}
+
+h2 {
+  font-weight: 600 !important;
+  color: #000;
+}
+
+h3 {
+  font-weight: 500 !important;
+  color: #000;
+  font-style: oblique;
 }
 
 .md-typeset {
@@ -61,6 +83,7 @@ body, input {
 
 .md-typeset h3{
   margin: 1.35rem 0 .8rem;
+  font-style: oblique;
 }
 
 nav.md-tabs {
@@ -69,6 +92,21 @@ nav.md-tabs {
 
 .md-nav__list ul {
   margin-left: 10px !important;
+}
+
+.md-typeset td,
+.md-typeset th {
+  font-size: 0.85rem;
+}
+
+#metadata-table td:nth-child(1) {
+  width: 15em;
+}
+
+@media only screen and (min-width:76.25em) {
+  .md-content {
+    margin-left: 12.1rem;
+  }
 }
 
 figure {
@@ -91,7 +129,7 @@ figure img.shadow {
 
 figure figcaption {
   margin-top: 0.5em;
-  font-style: italic;
+  font-style: oblique;
 }
 
 dt {
@@ -164,24 +202,6 @@ dt {
   color: #a6a6a6;
 }
 
-h1 {
-  font-weight: 700 !important;
-  color: #000 !important;
-}
-
-h2 {
-  font-weight: 500 !important;
-  color: #000;
-}
-
-h3 {
-  color: #000;
-}
-
-h4 {
-  font-style: italic;
-}
-
 img.shadowed {
   filter: drop-shadow(0.25em 0.35em 0.4em #888);
   margin-bottom: 1em;
@@ -197,19 +217,4 @@ img.shadowed.iphone-screenshot {
 
 img.vertically-centered {
   vertical-align: middle;
-}
-
-.md-typeset td,
-.md-typeset th {
-  font-size: 0.85rem;
-}
-
-#metadata-table td:nth-child(1) {
-  width: 15em;
-}
-
-@media only screen and (min-width:76.25em) {
-  .md-content {
-    margin-left: 12.1rem;
-  }
 }
